#314 fixed same line alignment for Iphone XR

--- a/packages/web/src/components/spa/HackAUBG/ScheduleSection/schedule_section.css
+++ b/packages/web/src/components/spa/HackAUBG/ScheduleSection/schedule_section.css
@@ -95,16 +95,17 @@
     .schedule-table-title {
         padding: 5% 0% 5% 0%;
     }
+    #friday-container {
+        margin-right: 3%;
+    }
+    #saturday-container {
+        margin-right: 3%;
+    }
 }
 
 @media only screen and (max-width: 300px) {
-    .schedule-text-container {
-        margin-left: 5%;
-        margin-right: 5%;
-        width: 120px;
-    }
     .schedule-table-container {
-        font-size: 0.9rem;
+        font-size: 0.7rem;
     }
 }
 
@@ -113,6 +114,6 @@
         margin-left: 7%;
     }
     .schedule-table-container {
-        width: 200px;
+        width: 280px;
     }
 }
